# kal

./: .gitattributes  .gitignore  Cargo.toml  README.md  Readme.md  comments.sketchbook.kal  comments_sketchbook.kal  for_loops.sketchbook.kal  import_export_sketchbook.kal  intrinsics.sketchbook.kal  multistage_dependent_types.sketchbook.kal  mut_sketchbook.kal  tensor_sketchbook.kal  tensors.sketchbook.kal
examples/: add_one.kal  big_file.kal  big_recursive.kal  boolean_xor.kal  chained.kal  error_addition.kal  error_addition_continue.kal  error_addition_continue_loop.kal  error_negative_min.kal  error_object_spread_type.kal  fn_add_one.kal  fn_named.kal  fn_object.kal  fn_object_empty.kal  handle.kal  handle_continue.kal  handle_empty.kal  handle_implicit.kal  handle_multiple_resume.kal  handle_nested.kal  handle_nested_continue.kal  handle_nested_resume.kal  handle_no_continue.kal  handle_no_resume.kal  handle_reassign.kal  handle_resume.kal  handle_two_effect_types.kal  if_else_if.kal  if_expression_comparison.kal  if_expression_true.kal  if_without_else.kal  let_expr_basic.kal  list_index.kal  list_negative_index.kal  loop_break.kal  loop_break_value.kal  loop_continue.kal  loop_yield.kal  mut_deep.kal  mut_increment.kal  (+32 more)
notes/: merge_ownership.kal  multi_return.kal  resume.kal  tensors.kal  types.kal
src/: ast.rs  core.rs  eval.rs  eval_impls.rs  fake_example.kal  interpreter.rs  intrinsics.rs  kal_grammar.lalrpop  kal_ref.rs  main.rs  tests.rs  types.rs
tests/: boolean_precedence.kal  comments.kal  comments_doc.kal  comments_doc_whitespace_description.kal  (+35 more)
(+11 files in other folders)
