[package]
name = "kal"
version = "0.1.0"
authors = ["maxeonyx <maxeonyx@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
lalrpop-util = "0.18.1"
regex = "0.2.0"
gc = "*"
gc_derive = "*"

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }
