[package]
name = "kal"
version = "0.1.0"
authors = ["maxeonyx <maxeonyx@gmail.com>"]
edition = "2021"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
regex = "0.2.0"

[build-dependencies]
lalrpop = "0.19.2"
